// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileMessage component should render with data props 1`] = `
<StyledFileMessageContainer
  className="LT-FileMessage-Container"
>
  <StyledFileMessageBody>
    <StyledFileIcon>
      <FaFile />
    </StyledFileIcon>
    <StyledFileName />
    <StyledFileDownloadButton
      onClick={[Function]}
    >
      <FaCloudDownload />
    </StyledFileDownloadButton>
    <div />
  </StyledFileMessageBody>
</StyledFileMessageContainer>
`;

exports[`FileMessage component should render without issues 1`] = `
<StyledFileMessageContainer
  className="LT-FileMessage-Container"
>
  <StyledFileMessageBody>
    <StyledFileIcon>
      <FaFile />
    </StyledFileIcon>
    <StyledFileName />
    <StyledFileDownloadButton
      onClick={[Function]}
    />
  </StyledFileMessageBody>
</StyledFileMessageContainer>
`;
